--- a/DESARROLLO SOFTWARE/Estructura base HTML.html
+++ b/DESARROLLO SOFTWARE/Estructura base HTML.html
@@ -34,3 +34,22 @@
         </ol>
     </body>
     </html>
+
+    "tabla
+
+    <body>
+        <table border="1">
+            <tr>
+                <td>China</td>
+                <td>1300 millones</td>
+            </tr>
+            <tr>
+                <td>India</td>
+                <td>1080 millones</td>
+            </tr>
+            <tr>
+            <td>Estados Unidos</td>
+            <td>295 millones</td>
+            </tr>
+        </table>
+    </body>
