--- a/DESARROLLO SOFTWARE/Estructura base HTML.html
+++ b/DESARROLLO SOFTWARE/Estructura base HTML.html
@@ -9,20 +9,23 @@
             p {color:orange}
         </style>
    </head>
-   <body>
+   <body background-color="blue">
        <h2>Encabezado en italica</h2>
-       <p>Parrafo de color anaranjado</p>       
+       <p>Parrafo de color<br> anaranjado</p>
+       <a href="https://www.google.com/">Visita google</a>       
    </body>
 </html>
 
 
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Título de la página</title>
         <meta charset="UTF-8">
+        <meta name="author" content="KRC">
+        <meta http-equiv="Refresh" content="30;URL(here url)">
     </head>
-    <body>
+    <body background-color="blue">
         <ol>
             <li>Argentina
                 <ul>
@@ -35,10 +38,11 @@
     </body>
     </html>
 
-    "tabla
+    "tabla"
 
-    <body>
-        <table border="1">
+    <body background-color="blue">
+       
+        <table border="1" >
             <tr>
                 <td>China</td>
                 <td>1300 millones</td>
