--- a/DESARROLLO SOFTWARE/ADMON VENTAS SPRINT 2/paginaAdmonVentas.html
+++ b/DESARROLLO SOFTWARE/ADMON VENTAS SPRINT 2/paginaAdmonVentas.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Principal Administrador de Ventas</title>
-    <link rel="stylesheet" href="estilopaginaprincipaladmonventas.css">
+    <title>Pagina Administrador de Ventas</title>
+    <link rel="stylesheet" href="estiloPaginaAdmonVentas.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <div class="contenedor-textos">
             <h1 class= "titulo">¡Este es tu módulo de Administrador de Ventas!</h1>
             <h2 class= "subtitulo">Ingrese o registre los pedidos realizados por cada uno de los clientes</h2>
-            <a href="#" class= "cta">Ingresar nueva venta</a>
+            <a href="#" class= "boton">Ingresar nueva venta</a>
         </div>
         <div class="contenedor-imagen">
             <img src="ilustraciones/imagen.svg" alt="">
