--- a/DESARROLLO SOFTWARE/ADMON VENTAS SPRINT 2/paginaAdmonVentas.html
+++ b/DESARROLLO SOFTWARE/ADMON VENTAS SPRINT 2/paginaAdmonVentas.html
@@ -15,10 +15,10 @@
         <div class="contenedor-textos">
             <h1 class= "titulo">¡Este es tu módulo de Administrador de Ventas!</h1>
             <h2 class= "subtitulo">Ingrese o registre los pedidos realizados por cada uno de los clientes</h2>
-            <a href="#" class= "boton">Ingresar nueva venta</a>
+            <a href="#" class= "botonnuevaventa">Ingresar nueva venta</a>
         </div>
         <div class="contenedor-imagen">
-            <img src="ilustraciones/imagen.svg" alt="">
+            <img src="ilustraciones/imagen.svg" alt="" class="img">
         </div>
         <img src="ilustraciones/vector.svg" alt="" class="vector">
 
