--- a/DESARROLLO SOFTWARE/GESTOR VENDEDORES SPRINT 2/paginaGestionVendedor.html
+++ b/DESARROLLO SOFTWARE/GESTOR VENDEDORES SPRINT 2/paginaGestionVendedor.html
@@ -15,10 +15,22 @@
         <div class="contenedor-textos">
             <h1 class= "titulo">¡Este es tu módulo para la Gestión de Vendedores</h1>
             <h2 class= "subtitulo">Ingrese la información básica de los vendedores que participan en un negocio de ventas</h2>
-            <a href="#" class= "boton">Ingresar nuevo vendedor</a>
+            <a href="#" class= "botonnuevovendedor">Ingresar nuevo vendedor</a>
+        </div>
+        <div class="contenedor-formulario">
+            <h1 class="ID">Identificador único del vendedor</h1>
+            <h2 class="sub">Ingrese el identificador (id) único del vendedor</h2>
+            <h1 class="nombre">Nombre completo</h1>
+            <h2 class="sub1">Escribe el nombre completo del vendedor</h2>
+            <h1 class="especialidad">Especialidad</h1>
+            <h2 class="sub2">Escribe la especialidad del vendedor</h2>
+            <h1 class="celular">Número de celular</h1>
+            <h2 class="sub3">Ingrese el número de celular del vendedor</h2>
+            <h1 class="fechaingreso">Fecha de ingreso</h1>
+            <h2 class="sub4">Escribe la fecha de ingreso del vendedor</h2>            
         </div>
         <div class="contenedor-imagen">
-            <img src="ilustraciones/imagen.svg" alt="">
+            <img src="ilustraciones/imagen.svg" alt="" class="img">
         </div>
         <img src="ilustraciones/vector.svg" alt="" class="vector">
 
