--- a/DESARROLLO SOFTWARE/GESTOR VENDEDORES SPRINT 2/paginaGestionVendedor.html
+++ b/DESARROLLO SOFTWARE/GESTOR VENDEDORES SPRINT 2/paginaGestionVendedor.html
@@ -11,12 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body> 
-    <form action="paginaGestionVendedor.html" class="form-box animate__animated animate__pulse">   
+    <form action="paginaGestionVendedor.html" class="formulario">   
     <main class="contenedor">
         <div class="contenedor-textos">
             <h1 class= "titulo">¡Este es tu módulo para la Gestión de Vendedores</h1>
-            <h2 class= "subtitulo">Ingrese la información básica de los vendedores que participan en un negocio de ventas</h2>            
-            <button type="submit" class="botonnuevovendedor">Ingresar nuevo vendedor</button>
+            <h2 class= "subtitulo">Ingrese la información básica de los vendedores que participan en un negocio de ventas</h2>       
         </div>       
         <div class="contenedor-formulario">
             <h1 class="ID">Identificador único del vendedor</h1>
@@ -28,7 +27,8 @@
             <h1 class="celular">Número de celular</h1>
             <input type="number" class="sub3" placeholder="Ingrese el número de celular del vendedor">            
             <h1 class="fechaingreso">Fecha de ingreso</h1>
-            <input type="date" class="sub4" placeholder="Escribe la fecha de ingreso del vendedor">                      
+            <input type="date" class="sub4" placeholder="Escribe la fecha de ingreso del vendedor">   
+            <button type="submit" class="botonnuevovendedor">Ingresar nuevo vendedor</button>                   
         </div>
         <div class="contenedor-imagen">
             <img src="ilustraciones/imagen.svg" alt="" class="img">
